--- a/src/assets/css/modules/_variables.scss
+++ b/src/assets/css/modules/_variables.scss
@@ -1,8 +1,13 @@
-// ----------------------------------------------------------------------------------------- 
+// -----------------------------------------------------------------------------------------
 //	Variables
 // -----------------------------------------------------------------------------------------
 
-// extedo layout colors
+
+$primary:       #FF920A;
+$complimentary: #0A78FF;
+$p-light:       #ffc249;
+$p-dark:        #c56200;
+
 
 $black:			#444444;	// text color
 
