--- a/src/assets/css/modules/_variables.scss
+++ b/src/assets/css/modules/_variables.scss
@@ -5,8 +5,8 @@
 
 $primary:       #FF920A;
 $complimentary: #0A78FF;
-$p-light:       #ffc249;
-$p-dark:        #c56200;
+$p-light:       #ffc34a;
+$p-dark:        #c66300;
 
 
 $black:			#444444;	// text color
@@ -27,7 +27,7 @@ $blue-light:	#f6f8fa;
 
 $red:			#ed5565;
 $green:			#b9f09b;
-$white:			#ffffff;
+$white:			#f7fbff;
 
 
 // typography
