--- a/src/app/main-view/country-details/country-details.component.html
+++ b/src/app/main-view/country-details/country-details.component.html
@@ -1,7 +1,29 @@
-<p>
-    country-details works!
-</p>
+<div app-overlay message="Processing, please wait..." [show]="showOverlay" [delayed]="true"></div>
+
 <div *ngIf="loaded">
-    <div *ngFor="let border of countryDetailsViewModel.borders">
-        <div (click)="setActiveCountry(border)">{{border}}</div>
+    <div app-world-map [countryCode]="countryDetailsViewModel.countryCode"
+        (selectCountryOnMap)="setActiveCountryByCode($event)">
     </div>
+    <div>Languages:
+        <div *ngFor="let language of countryDetailsViewModel.languages">
+            <div>{{language}}</div>
+        </div>
+    </div>
+    <div>Currencies:
+        <div *ngFor="let currency of countryDetailsViewModel.currencies">
+            <div>{{currency}}</div>
+        </div>
+    </div>
+    <div>Timezones:
+        <div *ngFor="let timezone of countryDetailsViewModel.timezones">
+            <div>{{timezone}}</div>
+        </div>
+    </div>
+    <div *ngFor="let border of countryDetailsViewModel.borders">
+        <div (click)="setActiveCountry(border)"><a href="#"
+                (click)="$event.preventDefault(); setActiveCountry(border)">{{border}}</a></div>
+    </div>
+    <button (click)="toggleFaultyDataPanel()">report faulty data</button>
+    <div *ngIf="showFaultyDataPanel" app-faulty-data [countryNames]="countryDetailsViewModel.borders"></div>
+
+</div>
