--- a/src/app/main-view/country-list/country-list.component.html
+++ b/src/app/main-view/country-list/country-list.component.html
@@ -1,5 +1,7 @@
-<p-dataView #dv [value]="countries" filterBy="name" [sortField]="sortField" [sortOrder]="sortOrder">
-    <p-header>
+<div app-overlay message="Processing, please wait..." [show]="showOverlay" [delayed]="true"></div>
+
+<p-dataView #dv [value]="countries" layout="grid" filterBy="name" [sortField]="sortField" [sortOrder]="sortOrder">
+    <p-header class="primary-colored">
         <div class="ui-helper-clearfix">
             <div class="ui-g">
                 <div class="ui-g-12 ui-md-4">
@@ -12,34 +14,14 @@
                             (input)="dv.filter($event.target.value)">
                     </div>
                 </div>
-                <div class="ui-g-6 ui-md-4" style="text-align:right">
-                    <p-dataViewLayoutOptions></p-dataViewLayoutOptions>
-                </div>
             </div>
         </div>
     </p-header>
-    <ng-template let-country pTemplate="listItem">
-        <div class="ui-g-12">
-            <div class="country-list-detail" (click)="showCountryDetails(country)">
-                <div>
-                    <img src="{{country.flag}}" alt="Flag of {{country.name}}">
-                    <div class="ui-g">
-                        <div class="ui-g-12"><b>{{country.name}}</b></div>
-                        <div class="ui-g-12">Population: <b>{{country.population}}</b></div>
-                    </div>
-                </div>
-                <button pButton type="button" icon="pi pi-search" (click)="selectCountry($event, country)"></button>
-            </div>
-        </div>
-    </ng-template>
     <ng-template let-country pTemplate="gridItem">
-        <div style="padding:.5em" class="ui-g-12 ui-md-3">
-            <p-panel [header]="country.name" [style]="{'text-align':'center'}">
-                <img src="{{country.flag}}" alt="Flag of {{country.name}}" width=60>
+        <div class="ui-g-12 ui-md-3" (click)="showCountryDetails(country)">
+            <p-panel [header]="country.name">
+                <img src="{{country.flag}}" alt="Flag of {{country.name}}">
                 <div class="country-list-detail">Population: {{country.population}}</div>
-                <hr class="ui-widget-content" style="border-top:0">
-                <button pButton type="button" icon="pi pi-search" (click)="selectCountry($event, country)"
-                    style="margin-top:0"></button>
             </p-panel>
         </div>
     </ng-template>
