--- a/src/app/main-view/main-view.component.html
+++ b/src/app/main-view/main-view.component.html
@@ -1,5 +1,7 @@
-<div class="prefix-panel primary-dark-colored"></div>
-<div app-country-list *ngIf="!selectedCountryName" (selectCountry)="setSelectedCountry($event)"
-    (processing)="processingTriggered($event)"></div>
+<div class="prefix-panel primary-dark-colored">
+    <button *ngIf="selectedCountryName" class="btn primary-light-colored" (click)=showCountryList()>show country
+        list</button>
+</div>
+<div app-country-list *ngIf="!selectedCountryName" (selectCountry)="setSelectedCountry($event)"></div>
 <div app-country-details *ngIf="selectedCountryName" [selectedCountryName]="selectedCountryName"
     (selectCountry)="setSelectedCountry($event)"></div>
