--- a/src/assets/css/partials/_main-view.scss
+++ b/src/assets/css/partials/_main-view.scss
@@ -4,14 +4,20 @@
 
     p-dropdown              { min-width:'140em'; }
 
-    p-panel                 { text-align:'center';
-        .ui-widget-header   { background-color: $p-light;}
-}
 }
 
 [app-country-details]       { width: 100%; height: 100%; background: $white; }
 
-[app-main-view]             { width: 100%; height: 100%; background: $white; }
+[app-world-map]             { width: 70%; height: 100%; background: $white
+}
+
+[app-main-view]             { width: 100%; height: 100%; background: $white;
+
+    p-panel                 { text-align:'center';
+        .ui-widget-header   { background-color: $p-light;}
+}
+
+}
 
 .primary-colored            {background-color: $primary;}
 .primary-dark-colored       {background-color :$p-dark;}
@@ -24,3 +30,10 @@ body .ui-dataview           {
 }
 
 input                       {border-radius: 4px;}
+
+.flex                       {   display: -webkit-box;
+                                display: -moz-box;
+                                display: -ms-flexbox;
+                                display: -webkit-flex;
+                                display: flex;
+                            }
